# particulator

./: .gitignore  CMakeLists.txt  main.cpp
behaviors/: behavior.h  moves.h  moves_down.h  moves_down_behavior.h
behaviours/: behaviour.h
grid/: bidirectional_grid.h  grid.h  update_params.h
lib/: colors.h  utils.h
particles/: debug_particle.h  empty_particle.h  particle.cpp  particle.h  sand_particle.h
src/: main.cpp
src/behaviors/: behavior.h  conductor.h  electron.cpp  electron.h  moves.h  moves_down.h
src/grid/: bidirectional_grid.h  grid.h
src/lib/: colors.h  neighborhood_strategy.h  utils.h
src/particles/: conductor.h  conductor_particle.h  debug.h  electrons.h  empty.h  particle.cpp  particle.h  sand.h  sand_particle.h
